--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.19",
     "firebase": "^12.7.0",
     "framer-motion": "^12.23.26",
     "groq-sdk": "^0.37.0",
